--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald|Open+Sans">
 </head>
 <body>
 
@@ -19,8 +20,8 @@
       <ul>
     </nav>
   </header>
-  
-	<section class="clear-fix" id="content">
+
+  <section class="clear-fix" id="content">
     <%= yield %>
   </section>
 </body>
