--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,7 +1,9 @@
 <article class="search-result-listing clear-fix">
   <div class="thumb-container">
     <%# if !listing.thumbs.empty? %>
-      <%= link_to(listing.thumbs[0] ? image_tag(listing.thumbs[0].src) : "NO PHOTO", listing, class: "thumb")
+      <%= link_to((listing.thumbs[0] ?
+                  image_tag(pic_url(listing.thumbs[0])) : "NO PHOTO"),
+                  listing, class: "thumb")
       %>
     <%# else %>
       <%#= link_to("", listing, class: "thumb") %>
