--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Listings#show</h1>
-<p>Find me in app/views/listings/show.html.erb</p>
+<h1><%= @listing.name %></h1>
+
+
+<h3><%= @listing.title %></h3>
+
+<p><%= @listing.description %></p>
