--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,13 @@
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald|Open+Sans">
 </head>
 <body>
-
+  <div class="lightbox">
+    <div class="viewport">
+      <ul class="clearfix"></ul>
+    </div>
+  </div>
   <header>
-    <h1>CARS</h1>
+    <h1>TOMMY'S CARS</h1>
     <nav>
       <ul>
         <li><a href="#">home</a></li>
