--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -2,17 +2,24 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+section.top-info {
+  margin: 30px 0;
+}
+
 section.pics {
   display: block;
-  width: 436px;
-  border: 1px solid #333333;
+  width: 448px;
+  border: 6px solid #333333;
+  border-bottom: 6px solid #333333;
+  border-top: 6px solid #333333;
   float: left;
   overflow: hidden;
 }
 
 section.top-info > section.pics > div.main-pic {
   width: 428px;
-  padding: 4px;
+  padding: 10px 10px 10px 10px;
+  border-bottom: 1px solid #333333;
 }
 
 div.main-pic > img {
@@ -26,24 +33,21 @@ img.car-pic:hover {
 }
 
 section.pics > ul.thumbs {
-  margin: 0 4px;
+//  margin: 4px;
   list-style: none;
   display: block;
+  margin: 8px;
 }
 
 ul.thumbs > li {
   display: block;
   float: left;
-  padding: 0 4px 4px 0;
+  padding: 2px;
 }
 
 ul.thumbs > li > img {
   display: block;
 }
-
-ul.thumbs > li:nth-child(8) {
-  padding: 0;
-};
 
 section.info {
   display: block;
@@ -62,7 +66,9 @@ section.info > article > ul {
 
 section.info > article > ul > li > label {
   display: inline-block;
-  width: 70px;
+  width: 90px;
+  margin: 0 15px 0 0;
+  text-align: right;
   font-weight: 900;
 }
 
