--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,65 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+form.new_user {
+  border: 6px solid #333333;
+  width: 600px;
+  margin: 0 auto;
+}
+
+form.new_user > h1 {
+  margin: 20px;
+}
+
+form.new_user > div.field {
+  margin: 10px 20px;
+  padding: 0px 0;
+  border-bottom: 1px dotted #333333;
+}
+
+div.field.field-with-errors {
+  border: 3px solid red !important;
+  padding: 10px !important;
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+}
+
+div.field-with-errors > p {
+  font-size: 14px;
+  margin-bottom: -10px;
+}
+
+div.field label {
+  display: block;
+  float: left;
+  width: 90px;
+  margin: 5px 0 0 0;
+}
+
+div.field > input, div.address > input {
+  display: block;
+  float: left;
+  position: relative;
+  top: 2px;
+  border: 0;
+  background: none;
+  font-size: 14px;
+  margin-bottom: 2px;
+}
+
+div.field label[for="user_password_confirmation"] {
+  width: 70px;
+}
+
+div.address {
+  float: left;
+}
+
+form.new_user input[type="submit"] {
+  border: 0;
+  border-bottom: 3px solid #333333;
+  font-size: 18px;
+  margin: 20px;
+}
+
