--- a/app/views/user_mailer/change_email_verification_email.txt.erb
+++ b/app/views/user_mailer/change_email_verification_email.txt.erb
@@ -2,4 +2,5 @@ Dear <%= @user.fname %>,
 
 Please verify your new email address by visiting this URL: <%= activate_users_url(activation_token: @user.activation_token) %>
 
-Thanks!
+Best,
+TommysCars.com
