--- a/app/views/user_mailer/change_email_verification_email.html.erb
+++ b/app/views/user_mailer/change_email_verification_email.html.erb
@@ -1,7 +1,11 @@
 <p>Dear <%= @user.fname %>,</p>
 
 <p>
-  Please verify your new email address by clicking <%= link_to("here", activate_users_url(activation_token: @user.activation_token)) %>. If you cannot click the link, you may instead visit this URL by copying and pasting it into your browser: <%= activate_users_url(activation_token: @user.activation_token) %>
+  Please verify your new email address by clicking <%= link_to("here", activate_users_url(activation_token: @user.activation_token)) %>.
+</p>
+
+<p>
+  If you cannot click the link, you may instead visit this URL by copying and pasting it into your browser: <%= activate_users_url(activation_token: @user.activation_token) %>
 </p>
 
 <p>Thanks!</p>
