--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(reset_password_url) do %>
+<%= form_tag(reset_password_users_url) do %>
 
   <% if flash.now[:bad_email] %>
     <p><%= flash.now[:bad_email] %></p>
