--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -4,6 +4,9 @@
 
 <section class="top-info clear-fix">
   <section class="pics">
+  <% if @listing.main_pics.empty? %>
+    <p>Sorry, no pics :(</p>
+  <% else %>
     <div class="main-pic">
       <%= image_tag @listing.main_pics.first.file.url, class: "car-pic" %>
     </div>
@@ -12,6 +15,7 @@
       <li><%= image_tag thumb.file.url, class: "car-pic" %></li>
       <% end %>
     </ul>
+  <% end %>
   </section>
 
 
