--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,7 +1,7 @@
 <article class="search-result-listing clear-fix">
   <div class="thumb-container">
-    <%= link_to((listing.thumbs[0] ?
-                image_tag(listing.thumbs[0].file.url) : "NO PHOTO YET"),
+    <%= link_to((listing.main_pic ?
+                image_tag(listing.main_pic.file.url(:sthumb)) : "NO PHOTO YET"),
                 listing, class: "thumb")
     %>
   </div>
