--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -11,8 +11,8 @@
       <%= image_tag @listing.main_pics.first.file.url, class: "car-pic" %>
     </div>
     <ul class="thumbs clear-fix">
-      <% @listing.thumbs.each do |thumb| %>
-      <li><%= image_tag thumb.file.url, class: "car-pic" %></li>
+      <% @listing.pics.each do |thumb| %>
+      <li><%= image_tag thumb.file.url(:sthumb), class: "car-pic" %></li>
       <% end %>
     </ul>
   <% end %>
