--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -371,7 +371,7 @@ article.search-result-listing > div.thumb-container {
 /*  border-radius: 3px;*/
 }
 
-article.search-result-listing > div.thumb-container > .thumb {
+article.search-result-listing > div.thumb-container > a.thumb {
   display: block;
   width: 50px;
   height: 50px;
@@ -380,6 +380,12 @@ article.search-result-listing > div.thumb-container > .thumb {
   font-size: 12px;
   color: #333333/*rgb(255,228,201)*/;
 }
+
+article.search-result-listing > div.thumb-container > a.thumb > img {
+  width: 50px;
+  height: 50px;
+}
+
 article.search-result-listing > div.listing-info{
   height: 56px;
   width: 415px;
