--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+input#listing_title {
+  width: 99%;
+  font-size: 15px;
+}
+
 section.top-info {
   margin: 30px 0;
 }
@@ -54,7 +59,8 @@ ul.thumbs > li > img {
 section.info {
   display: block;
   float: left;
-  margin: 0 0 0 30px;
+  margin: 0 0 0 50px;
+  width: 250px;
 }
 
 section.info > article > header {
@@ -68,16 +74,28 @@ section.info > article > ul {
 
 section.info > article > ul > li > label {
   display: inline-block;
-  width: 90px;
-  margin: 0 15px 0 0;
-  text-align: right;
+  width: 100%;
+//  margin: 0 15px 0 0;
+  text-align: left;
   font-weight: 900;
+}
+
+section.info > article > ul > li > span {
+  display: block;
+  float: left;
+  clear: both;
+  margin-left: 60px;
 }
 
 section.description {
   margin: 20px 0 0 0;
   display: block;
   clear: both;
+}
+
+section.description textarea#listing_description {
+  width: 99%;
+  font-size: 15px;
 }
 
 div.lightbox {
